# cc

./: LICENSE  README.md
.claude-plugin/: marketplace.json
codex/: README.md
codex-sprint/: README.md
codex-sprint/.claude-plugin/: plugin.json
codex-sprint/skills/codex-sprint/: SKILL.md  mechanics.md
codex/.claude-plugin/: plugin.json
codex/skills/codex/: SKILL.md  reference.md
docs/plans/: 2026-06-13-mimo-code-design.md  2026-06-13-mimo-code-implementation.md
mimo-code/: README.md  package.json
mimo-code/.claude-plugin/: plugin.json
mimo-code/agents/: mimo-delegate.md
mimo-code/scripts/: mimo-run.mjs
mimo-code/scripts/test/: helpers.test.mjs  launcher-e2e.test.mjs
mimo-code/skills/mimo-code/: SKILL.md
review-loop/: README.md
review-loop/.claude-plugin/: plugin.json
review-loop/agents/: exclusions.md  fix.md  local-reviewer.md
review-loop/commands/: review-loop.md  run-review-loop.md
review-loop/skills/fix/: SKILL.md  fix-prompt.md
review-loop/skills/review-loop/: SKILL.md  setup.sh
rust-dev/: README.md
rust-dev/.claude-plugin/: plugin.json
rust-dev/agents/: review-rust-code.md  rust-builder.md  rust-coder.md
rust-dev/skills/rust-dev/: SKILL.md
rust-dev/skills/rust-dev/assets/workspace-template/: Cargo.toml  README.md
rust-dev/skills/rust-dev/assets/workspace-template/project/: Cargo.toml
rust-dev/skills/rust-dev/assets/workspace-template/project-cli/: Cargo.toml
rust-dev/skills/rust-dev/assets/workspace-template/project-cli/src/: main.rs
rust-dev/skills/rust-dev/assets/workspace-template/project/src/: lib.rs
(+8 files in other folders)
